--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,36 +1,34 @@
 ---
-import config from "@config/config.json";
-import social from "@config/social";
-import HeroImg from "./HeroImg.astro";
+import config from '@config/config.json';
+import social from '@config/social';
+import HeroImg from './HeroImg.astro';
 
 const socialItems = social.networks;
 ---
 
-<section class="bg-zinc-50 dark:bg-zinc-900">
-  <div class="mx-auto max-w-screen-lg px-4 py-0 sm:px-6 pb-6 sm:pb-12 lg:px-8">
-    <div class="flex items-start justify-between">
-      <div class="rounded-lg w-3/5">
-        <h1
-          class="text-lg md:text-2xl font-bold text-zinc-900 dark:text-white sm:text-3xl mb-0"
-        >
-          {config.site.title}
-        </h1>
-        <p class="mt-1.5 text-sm md:text-lg text-zinc-500 dark:text-zinc-400">
-          {config.site.description}
-        </p>
-        <div class="flex space-x-5 pt-8 m-auto">
-          {
-            socialItems?.map((item) => (
-              <a href={item.url} target="_blank" rel="noopener noreferrer">
-                <figure>
-                  <Fragment set:html={item.svg} />
-                </figure>
-              </a>
-            ))
-          }
-        </div>
+<section>
+  <div class="mx-auto flex max-w-screen-lg items-center justify-center py-6 sm:pb-12">
+    <div class="w-2/3 rounded-lg text-center">
+      <h1 class="mb-8 text-5xl font-bold">
+        {config.site.title}
+      </h1>
+      <p class="text-md mt-1.5 text-zinc-500 md:text-lg">
+        {config.site.description}
+      </p>
+      <div class="flex justify-center space-x-5 pt-8">
+        {
+          socialItems?.map((item) => (
+            <a href={item.url} target="_blank" rel="noopener noreferrer">
+              <figure>
+                <Fragment set:html={item.svg} />
+              </figure>
+            </a>
+          ))
+        }
       </div>
-      <!-- <HeroImg /> -->
+    </div>
+    <div class="hidden w-1/3 sm:block">
+      <HeroImg />
     </div>
   </div>
 </section>
