--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,11 @@ const posts = (await getCollection("blog")).sort(
 
 <Base>
   <Hero />
+  <div class="mt-4 mb-12">
+    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 dark:text-white mb-4">Latest Posts</h2>
+  </div>
   <Posts posts={posts} />
-  <HomePagination />
+  <div class="mt-4">
+    <HomePagination />
+  </div>
 </Base>
