--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -1,7 +1,7 @@
 ---
 import Base from "@layouts/Base.astro";
 import CategoryIcon from "@icons/CategoryIcon.astro";
-import { getTaxonomy } from "@utils/getAllTags";
+import { getTaxonomy } from "@utils/blogFunctions";
 
 const categories = await getTaxonomy("blog", "categories");
 ---
