imrove in routines ui

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const socialItems = social.networks;
   <div class="mx-auto flex max-w-screen-lg items-center justify-center py-6 sm:pb-12">
     <div class="w-2/3 rounded-lg text-center">
       <h1 class="mb-8 text-5xl font-bold">
-        {config.site.title}
+        Your Daily Way
       </h1>
       <p class="text-md mt-1.5 text-zinc-500 md:text-lg">
         {config.site.description}
