--- a/src/components/RoutineCard.astro
+++ b/src/components/RoutineCard.astro
@@ -2,24 +2,52 @@
 const { person } = Astro.props;
 ---
 
-<div class="mb-12 w-full overflow-hidden rounded-md border border-gray-400 lg:flex lg:max-w-full">
-  <img
-    class="h-48 flex-none rounded-t bg-cover lg:h-auto lg:w-48 lg:rounded-t-none object-fill sm:w-full xs:w-full"
-    src={person.image}
-    alt={`Avatar of ${person.name}`}
-  />
-  <div class="flex flex-col justify-between p-4 leading-normal lg:border-l lg:border-r lg:border-t lg:border-gray-400">
-    <div class="mb-8">
-      <div class="mb-4 flex items-center">
-        <img class="mr-4 h-16 w-16 rounded-full" src={person.image} alt={`Avatar of ${person.name}`} />
-        <div class="text-sm">
-          <p class="leading-none">{person.name}</p>
-          <p class="">{person.age} years old</p>
-        </div>
-      </div>
-      <h3 class="mb-2 text-xl font-bold">{person.uniqueRoutine}</h3>
-      <p class="mb-8 text-base">{person.description}</p>
-      <a href={`/routines/${person.age}/`} class="text-zinc-500 hover:underline">Explore Routine</a>
+<div class="relative flex w-full flex-row rounded-xl shadow-md">
+  <div class="relative m-0 w-2/5 shrink-0 overflow-hidden rounded-xl rounded-r-none bg-clip-border">
+    <img src={person.image} class="h-45 w-full object-cover" />
+  </div>
+  <div class="p-6">
+    <h2
+      class="mb-4 block font-sans text-3xl font-semibold uppercase leading-relaxed tracking-normal text-indigo-500 antialiased"
+    >
+      {person.name}
+    </h2>
+    <h3 class="text-blue-gray-900 mb-2 block font-sans text-2xl font-semibold leading-snug tracking-normal antialiased">
+      {person.uniqueRoutine}
+    </h3>
+    <p class="mb-8 block font-sans text-base font-normal leading-relaxed text-gray-700 antialiased">
+      {person.description}
+    </p>
+    <div class="px-6 py-4">
+      <h3 class="text-bold mb-2 mr-2 inline-block text-lg">Optimized for:</h3>
+      <span class="mb-2 mr-2 inline-block rounded-full bg-gray-200 px-3 py-1 text-sm font-semibold text-gray-700"
+        >#productivity</span
+      >
+      <span class="mb-2 mr-2 inline-block rounded-full bg-gray-200 px-3 py-1 text-sm font-semibold text-gray-700"
+        >#performance</span
+      >
+      <span class="mb-2 inline-block rounded-full bg-gray-200 px-3 py-1 text-sm font-semibold text-gray-700"
+        ># Learning</span
+      >
     </div>
+    <a class="inline-block" href="#">
+      <button
+        class="flex select-none items-center gap-2 rounded-lg px-6 py-3 text-center align-middle font-sans text-xs font-bold uppercase text-indigo-500 transition-all hover:bg-indigo-500/10 active:bg-indigo-500/30 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+        type="button"
+      >
+        Explore Routine
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          aria-hidden="true"
+          class="h-4 w-4"
+        >
+          <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
+        </svg>
+      </button>
+    </a>
   </div>
 </div>
